crates/solidity-v2/testing/snapshots/cst_output/FunctionDefinition/constant_state_mutability/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected ConstantKeyword_Reserved. One of AtKeyword_Unreserved, ErrorKeyword_Unreserved, ExternalKeyword_Reserved, FromKeyword_Unreserved, GlobalKeyword_Unreserved, Identifier, InternalKeyword_Reserved, LayoutKeyword_Unreserved, OpenBrace, OverrideKeyword_Reserved, PayableKeyword_Reserved, PrivateKeyword_Reserved, PublicKeyword_Reserved, PureKeyword_Reserved, ReturnsKeyword_Reserved, RevertKeyword_Unreserved, Semicolon, TransientKeyword_Unreserved, ViewKeyword_Reserved, VirtualKeyword_Reserved was expected
   ╭─[ crates/solidity-v2/testing/snapshots/cst_output/FunctionDefinition/constant_state_mutability/input.sol:2:14 ]
   │
 2 │ function a() constant {}
   │              ────┬───  
   │                  ╰───── Error occurred here.
───╯
